APL-705 added producer for 2FA repository; fixed tests; small refactoring;